v20060626
	Merged Redhat/Fedora patches
v20060531
	#ifdef linux-dependant code in mformat.c
v20060525
	Fix gcc4 warnings
	Fix reading of boot sector (block size)
v20060228b
	Do no longer open floppy devices with O_EXCL, in order to enable
	work-around against broken cache.
v20060228
	If no info dir exists at all, assume dir
v20060227
	Support for DESTDIR
v20051011
	Fix Unix loop
v20050410
	Cygwin compatibility
v20050317
	Solaris 8 compatibility
v20050302
	Released 3.9.10
v20050228
	Support for multiple drives in floppyd
v20050213b
	Updated .spec file
v20050213
	Fixed some long name directory entry freeing bugs
v20040505
	Fixed duplicate FAT writing error. Fixed segfault on short images.
	Mformat creates images of correct size.
	CYGWIN compatibility (O_BINARY flag).
v20040420
	Cygwin patch for plain_io.c (no locking)
v20040228
	Fix a couple of memory leaks in config file parsing. Fix llong.h
	(redefined same symbol twice)
	Fix a variable initialization problem in plain_io.c
	New mclasserase command to erase memory cards
	C99 "compatibility" (cf http://www.mtools.linux.lu/download.html)
v20030718
	Fix rootskip and rate of XDF disks
v20030705
	Fix inverted IS_MFORMAT_ONLY conditon in plain_io.c
v20030609
	Moved putc after variable description (anybody knows about a -W
	flag so that gcc warns about these?)
v20030606
	Fixed mattrib -p (missing slash)
v20030605
	Added -m option to mformat to specify a non-standard mediabyte
v20030524
	Added -d options to mformat to specify number of FAT copies. Can
	also be set using the MTOOLS_NFATS environmental variable.
	Also added similar env variable for root directory length
	Signed/unsigned fixes, to satisfy increased pickyness of gcc ;-)
	CYGWIN fixes for mcat
	floppyd bugfixes
v20030213
	Released 3.9.9 : Identical to pre-3.9.9 except for the version number
v20030213
	Released 3.9.9 Pre-1
	Fixed max numbers of sectors for FAT12 and FAT16 (was off by one...)
	Improved fat_len calculation