@@ -36,7 +36,7 @@ void mmount(int argc, char **argv, int type)
 		exit(1);
 	}
 	drive = toupper(argv[1][0]);
-	Stream = find_device(drive, O_RDONLY, &dev, boot, name, &media, 0);
+	Stream= find_device(drive, O_RDONLY, &dev, boot, name, &media, 0, NULL);
 	if(!Stream)
 		exit(1);
 	FREE(&Stream);
